--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li class="menu__item">
             <a href="#" class="menu__link">Contacts</a>
           </li>
-          <li class="menu__item">
+          <li class="menu__item menu__item-btn">
             <button href="#" class="menu__btn">BUY</button>
           </li>
 
@@ -32,11 +32,11 @@
       <div class="header__battom">
         <h1 class="title"><span class="title--air">Air</span><span class="title--pod">Pod</span><span class="title--s">S</span><span class="title--m">M</span><span class="title--ax">AX</span></h1>
         <div class="header__batton-img">
-          <!-- <img src="img/black.png" alt="Headphones"> -->
-          <!-- <img src="img/blue.png" alt="Headphones"> -->
-          <!-- <img src="img/green.png" alt="Headphones"> -->
-          <img src="img/red.png" alt="Headphones">
-          <!-- <img src="img/white.png" alt="Headphones"> -->
+          <img class="head-item" src="img/black.png" alt="Headphones">
+          <img class="head-item" src="img/blue.png" alt="Headphones">
+          <img class="head-item" src="img/green.png" alt="Headphones">
+          <img class="head-item head-item--active" src="img/red.png" alt="Headphones">
+          <img class="head-item" src="img/white.png" alt="Headphones">
         </div>
       </div>
     </div>
@@ -48,19 +48,19 @@
         <p class="main__color-text">The perfect balance between the purityof hi‑fi and the magic of AirPods.
           The ultimate personal audio experience.</p>
           <div class="main__color-list">
-            <button class="main__color-btn">
+            <button class="main__color-btn" data-button="color-black">
             <img src="img/black2.png" alt="">
           </button>
-          <button class="main__color-btn">
+          <button class="main__color-btn" data-button="color-blue">
             <img src="img/blue2.png" alt="">
           </button>
-          <button class="main__color-btn">
+          <button class="main__color-btn" data-button="color-green">
             <img src="img/green2.png" alt="">
           </button>
-          <!-- <button class="main__color-btn">
+          <!-- <button class="main__color-btn main__color-btn--active" data-button="color-red">
             <img src="img/red2.png" alt="">
           </button> -->
-          <button class="main__color-btn">
+          <button class="main__color-btn" data-button="color-white">
             <img src="img/white2.png" alt="">
           </button>
           </div>
