--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div class="header__battom">
         <h1 class="title"><span class="title--air">Air</span><span class="title--pod">Pod</span><span class="title--s">S</span><span class="title--m">M</span><span class="title--ax">AX</span></h1>
         <div class="header__batton-img">
-          <img class="head-item" src="img/black.png" alt="Headphones">
-          <img class="head-item" src="img/blue.png" alt="Headphones">
-          <img class="head-item" src="img/green.png" alt="Headphones">
-          <img class="head-item head-item--active" src="img/red.png" alt="Headphones">
-          <img class="head-item" src="img/white.png" alt="Headphones">
+          <img class="head-item color--black" src="img/black.png" alt="Headphones">
+          <img class="head-item color--blue" src="img/blue.png" alt="Headphones">
+          <img class="head-item color--green" src="img/green.png" alt="Headphones">
+          <img class="head-item head-item--active color--red" src="img/red.png" alt="Headphones">
+          <img class="head-item color--white" src="img/white.png" alt="Headphones">
         </div>
       </div>
     </div>
@@ -48,19 +48,19 @@
         <p class="main__color-text">The perfect balance between the purityof hi‑fi and the magic of AirPods.
           The ultimate personal audio experience.</p>
           <div class="main__color-list">
-            <button class="main__color-btn" data-button="color-black">
+            <button class="main__color-btn" data-button="color--black">
             <img src="img/black2.png" alt="">
           </button>
-          <button class="main__color-btn" data-button="color-blue">
+          <button class="main__color-btn" data-button="color--blue">
             <img src="img/blue2.png" alt="">
           </button>
-          <button class="main__color-btn" data-button="color-green">
+          <button class="main__color-btn" data-button="color--green">
             <img src="img/green2.png" alt="">
           </button>
-          <!-- <button class="main__color-btn main__color-btn--active" data-button="color-red">
+          <button class="main__color-btn main__color-btn--active" data-button="color--red"> -->
             <img src="img/red2.png" alt="">
-          </button> -->
-          <button class="main__color-btn" data-button="color-white">
+          </button>
+          <button class="main__color-btn" data-button="color--white">
             <img src="img/white2.png" alt="">
           </button>
           </div>
@@ -76,11 +76,11 @@
             <p>The stainless steel structure is wrapped in a soft-touch material to provide a remarkable harmony between resistance, flexibility and comfort.</p>
             <p>The telescoping arms expand and stay in any position you want, allowing you to maintain fit and isolation.</p>
           </div>
-          <!-- <img src="img/silver_side.jpg" alt="">
-          <img src="img/silver_side_black.jpg" alt="">
-          <img src="img/silver_side_green.jpg" alt=""> -->
-          <img src="img/silver_side_red.jpg" alt="">
-          <!-- <img src="img/silver_side_white1.jpg" alt=""> -->
+          <img class="head-item color--blue" src="img/silver_side.jpg" alt="">
+          <img class="head-item color--black" src="img/silver_side_black.jpg" alt="">
+          <img class="head-item color--green" src="img/silver_side_green.jpg" alt="">
+          <img class="head-item head-item--active color--red" src="img/silver_side_red.jpg" alt="">
+          <img class="head-item color--white" src="img/silver_side_white1.jpg" alt="">
         </div>
       </div>
     </section>
@@ -88,11 +88,11 @@
       <div class="container">
         <h2 class="main__title">It even preserves the battery.</h2>
         <p class="smart__text">When stored in the sleek and lightweight Smart Case , AirPods Max enter a low-power state to save energy.</p>
-        <!-- <img src="img/smartcase-silver-witb 1.jpg" alt="">
-        <img src="img/smartcase-silver-witb 2.jpg" alt="">
-        <img src="img/smartcase-silver-witb 3.jpg" alt="">
-        <img src="img/smartcase-silver-witb 4.jpg" alt=""> -->
-        <img src="img/smartcase-silver-witb 5.jpg" alt="">
+        <img class="head-item color--white" src="img/smartcase-silver-witb 1.jpg" alt="">
+        <img class="head-item color--green" src="img/smartcase-silver-witb 2.jpg" alt="">
+        <img class="head-item color--black" src="img/smartcase-silver-witb 3.jpg" alt="">
+        <img class="head-item color--blue" src="img/smartcase-silver-witb 4.jpg" alt="">
+        <img class="head-item head-item--active color--red" src="img/smartcase-silver-witb 5.jpg" alt="">
         <h2 class="main__title smart__title">Stayin' alive, stayin' alive.</h2>
         <p class="smart__number">20</p>
         <p class="smart__text-two">hours of music, movies and calls with Active Noise Cancellation and Custom Spatial Audio turned on. 5 And just 5 minutes of charging via the Lightning connector gives you an hour and a half of sound. 6</p>
