--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Headphones</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
   <header class="header">
@@ -26,7 +26,6 @@
           <li class="menu__item menu__item-btn">
             <button href="#" class="menu__btn">BUY</button>
           </li>
-
         </ul></nav>
       </div>
       <div class="header__battom">
@@ -57,7 +56,7 @@
           <button class="main__color-btn" data-button="color--green">
             <img src="img/green2.png" alt="">
           </button>
-          <button class="main__color-btn main__color-btn--active" data-button="color--red"> -->
+          <button class="main__color-btn main__color-btn--active" data-button="color--red">
             <img src="img/red2.png" alt="">
           </button>
           <button class="main__color-btn" data-button="color--white">
